--- a/app/build.gradle
+++ b/app/build.gradle
@@ -25,6 +25,10 @@ dependencies {
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
+    testCompile "org.robolectric:robolectric:3.4.2"
+    testCompile 'org.mockito:mockito-core:1.10.19'
+    testCompile 'junit:junit:4.12'
+
     compile('com.squareup.retrofit2:converter-simplexml:2.1.0') {
         exclude group: 'xpp3', module: 'xpp3'
         exclude group: 'stax', module: 'stax-api'
@@ -39,5 +43,4 @@ dependencies {
     compile 'com.google.android.gms:play-services-location:10.0.1'
     compile 'com.j256.ormlite:ormlite-android:5.0'
 
-    testCompile 'junit:junit:4.12'
    }
