--- a/app/build.gradle
+++ b/app/build.gradle
@@ -43,4 +43,10 @@ dependencies {
     compile 'com.google.android.gms:play-services-location:10.0.1'
     compile 'com.j256.ormlite:ormlite-android:5.0'
 
-   }
+    androidTestCompile 'com.android.support.test.espresso:espresso-contrib:2.2.2', {
+        exclude group: 'com.android.support', module: 'support-annotations'
+        exclude group: 'com.android.support', module: 'support-v4'
+        exclude group: 'com.android.support', module: 'design'
+        exclude group: 'com.android.support', module: 'recyclerview-v7'
+    }
+}
